# PlantSmash

./: .clang-format  .clang-tidy  .gitignore  .gitmessage  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/Modules/: CodeFormat.cmake  CodeTidy.cmake  FindClangTidy.cmake  ToolsChain.cmake
docs/: NamingConventions.md
lib/: CMakeLists.txt
lib/src/: main.cc
scripts/git/: addCommit.sh  checkEOF.sh  formatPatch.sh  rebase.sh  toBuild.sh
scripts/py/: PngToBmp.py
src/: LoginWindow.cc
src/include/components/: CharacterSelection.hh  ImageButton.hh
src/include/view/: LoginWindow.hh
tests/: CMakeLists.txt
tests/Framework/: CMakeLists.txt  Qt5Test.cc
tests/Mock/: CMakeLists.txt
tests/Mock/include/: QTmock.hh
tests/Mock/src/: QTmock.cc
tests/components/: CMakeLists.txt  CharacterSelection.cc  main.cc
tests/view/: CMakeLists.txt  LoginWindow.cc  main.cc
